test/files/invalid/docstrings_file_identifier.fbs
//! Okay
/// Bad1
//! Bad2
/// Bad3
file_identifier /// Bad4
/// Bad5
"foo" /// Bad6
/// Bad7
; /// Bad8
/// Bad9
//! Bad10
